--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,10 @@ verify_ssl = false
 
 [packages]
 flask = "*"
-flask-wtf = "*"
 requests = "*"
 flask-sqlalchemy = "*"
 pymysql = "*"
+wtforms = "*"
 
 [requires]
 python_version = "3.6"
