--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ pymysql = "*"
 wtforms = "*"
 flask-login = "*"
 flask-caching = "*"
+flask-migrate = "*"
+flask-script = "*"
+flask-mail = "*"
 
 [requires]
 python_version = "3.6"
